# api/db/models.py
@@ -13,7 +13,7 @@ class User(Base):
 class Car(Base):
     __tablename__ = "cars"
     id       = Column(Integer, primary_key=True, index=True)
-    carClass = Column(Integer, nullable=False)
+    carclass = Column(Integer, nullable=False)
     price    = Column(Integer, nullable=False)
     capacity = Column(Integer, nullable=False)
     name     = Column(String,  nullable=False)
@@ -21,8 +21,8 @@ class Car(Base):
 class Rent(Base):
     __tablename__ = "rents"
     id        = Column(Integer,  primary_key=True, index=True)
-    carId     = Column(Integer,  nullable=False)
-    userId    = Column(Integer,  nullable=False)
-    dateStart = Column(DateTime, nullable=False)
-    dateEnd   = Column(DateTime, nullable=False)
+    carid     = Column(Integer,  nullable=False)
+    userid    = Column(Integer,  nullable=False)
+    datestart = Column(DateTime, nullable=False)
+    dateend   = Column(DateTime, nullable=False)
     status    = Column(String,   nullable=False)
