# api/schemas/car.py
@@ -2,7 +2,7 @@ from pydantic import BaseModel, Field
 
 class CarBase(BaseModel):
     """Base schema with common car fields"""
-    carClass: int
+    carclass: int
     price: int = Field(..., gt=0)
     capacity: int = Field(..., gt=0)
     name: str
